[project]
name = "threads-scraper"
version = "0.1.0"
description = "使用 Playwright 抓取 Meta Threads 公開貼文的工具，不需要登入"
requires-python = ">=3.10"
dependencies = [
    "jmespath>=1.0.0",
    "nested-lookup>=0.2.25",
    "parsel>=1.8.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]
